Expand <main> width to prevent text boxes from getting clipped

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -1,3 +1,11 @@
 .tree-container {
   width: 100%;
+  max-width: 100vw;
+}
+
+main {
+  width: 150%;
+
+  display: flex;
+  justify-content: space-around;
 }
